# slamplay

./: .clang-format  .gitignore  CMakeLists.txt  GPU_support.md  README.md  bash_utils.sh  build.sh  build_thirdparty.sh  clean.sh  config.sh  install_data.sh  install_dependencies.sh  install_dl_models.sh  install_local_opencv.sh  install_local_pcl.sh  install_local_tensorrt.sh  install_local_torchcpp.sh  install_pytorchcpp.sh  install_tensorflow_cc.sh  install_tensorrt.sh  install_tracy.sh
backend/: CMakeLists.txt
backend/ceres/: CMakeLists.txt  test_ceres_basics.cpp  test_ceres_bundle_adjuster_simple.cpp  test_ceres_curve_fitting.cpp  test_ceres_curve_fitting_robutst.cpp  test_ceres_powell.cpp  test_ceres_slam_curve_fitting.cpp
backend/ceres/pose_graph_2d/: CMakeLists.txt  angle_manifold.h  normalize_angle.h  plot_results.py  pose_graph_2d.cpp  pose_graph_2d_error_term.h  types.h
backend/ceres/pose_graph_3d/: CMakeLists.txt  plot_results.py  pose_graph_3d.cpp  pose_graph_3d_error_term.h  types.h
backend/eigen_optimization/: test_eigen_gauss_newton_curve_fitting.cpp  test_eigen_gauss_newton_pose_optimization.cpp  test_eigen_levenberg_marquardt_pose_optimization.cpp
backend/g2o/: CMakeLists.txt  test_g2o_3d_line.cpp  test_g2o_3d_line_sim.cpp  test_g2o_icp.cpp  test_g2o_icp_sba.cpp  test_g2o_plane.cpp  test_g2o_plane_sim.cpp  test_g2o_sba.cpp  test_g2o_sim3.cpp  test_g2o_slam_curve_fitting.cpp  test_g2o_slam_gauss_newton_pose_optimization.cpp
backend/gtsam/: CMakeLists.txt  SFMdata.h  test_gtsam_cam_resectioning.cpp  test_gtsam_imu_factors.cpp  test_gtsam_isam2.cpp  test_gtsam_odometry.cpp  test_gtsam_sfm.cpp  test_gtsam_simple_rotation.cpp  test_gtsam_slam2d.cpp
backend/sesync/: test_main.cpp  test_main_viz.cpp
backend/slam_ba_simple_g2o_ceres/: CMakeLists.txt  test_bundle_adjustment_ceres.cpp  test_bundle_adjustment_g2o.cpp
backend/slam_pose_graph_simple_g2o/: test_pose_graph_g2o_SE3.cpp  test_pose_graph_g2o_lie_algebra.cpp
dense_mapping/: CMakeLists.txt  test_monocular_mapping.cpp  test_octomap_mapping.cpp  test_pointcloud_mapping.cpp  test_surfel_mapping.cpp
frontend/: CMakeLists.txt
frontend/camera_model/: test_opencv_undistort_image.cpp
frontend/depth_dl/: CMakeLists.txt
frontend/depth_dl/depth_anything/: CMakeLists.txt  test_depth_estimation.cpp
frontend/depth_dl/depth_anything_tensorrt/: CMakeLists.txt  test_depth_estimation.cpp
frontend/depth_dl/depth_anything_tensorrt/depth_anything/: DepthAnything.cpp  DepthAnything.h  DepthAnythingSettings.cpp  (+1 more)
frontend/features/: test_line_matching.cpp  test_opencv_features_extract_match_homography.cpp  test_opencv_orb_extract_match.cpp  test_orb_from_scratch.cpp
frontend/features_dl/: CMakeLists.txt
frontend/features_dl/hfnet/: CMakeLists.txt  README.md  test_and_compare_extractors.cpp  test_and_compare_matchers.cpp  test_extractors.cpp  test_hfnet_tf_v1.cpp  test_hfnet_tf_v2.cpp  test_hfnet_vino.cpp  test_match_global_feats.cpp  test_match_local_feats.cpp
frontend/features_dl/superpointglue_tensorrt/: CMakeLists.txt  README.md  test_superpointglue_image.cpp  test_superpointglue_sequence.cpp
frontend/features_tensorrt/: CMakeLists.txt  README.md  test_superpointglue_image.cpp
frontend/features_tensorrt/convert2onnx/: convert_superglue_to_onnx.py  superglue.py  superpoint.py
frontend/features_tensorrt/include/: read_config.h  super_glue.h  super_point.h  utils.h
frontend/features_tensorrt/src/: super_glue.cpp  super_point.cpp
frontend/icp/: test_points_alignment_2D.cpp  test_points_alignment_3D.cpp  test_range_bearing_model_2D.cpp  test_simple_2D_kdtree.cpp
frontend/motion_estimation_2D_2D/: test_pose_estimation_2d2d.cpp
frontend/motion_estimation_3D_2D/: test_pose_estimation_3d2d.cpp
frontend/motion_estimation_3D_3D/: test_pose_estimation_3d3d.cpp
frontend/opencv/: test_opencv_image_basics.cpp
frontend/opticflow_direct_method/: DirectPoseEstimation.h  OpticalFlowTracker.h  test_direct_method.cpp  test_optical_flow.cpp
frontend/pcl/: CMakeLists.txt  test_pcl_feature_global_alignment.cpp  test_pcl_filtering_pass_through.cpp  test_pcl_filtering_stat_outlier_removal.cpp  test_pcl_filtering_voxel.cpp  test_pcl_icp.cpp  test_pcl_kdtree.cpp  test_pcl_mat_transform.cpp
frontend/pointclouds/: test_opencv_sophus_build_rgbd_pointcloud.cpp
frontend/stereo_vision/: test_opencv_stereo_vision.cpp
frontend/trajectory_alignment/: test_align_3d_trajs.cpp
frontend/triangulation/: test_opencv_triangulation.cpp
full_slam/: CMakeLists.txt
full_slam/app/: run_euroc_stereo.cpp  run_kitti_stereo.cpp
full_slam/apps/: CMakeLists.txt  run_euroc_stereo.cpp  run_kitti_stereo.cpp
full_slam/config/: default.yaml  euroc.yaml  kitti.yaml
full_slam/include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  imudata.h  map.h  mappoint.h  viewer.h  visual_odometry.h
full_slam/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
full_slam/test/: test_triangulation.cpp
loop_closure/: CMakeLists.txt  ground_truth_comparison.py  paths.py  precision_recall.py  test_compare_loop_detection_orb_hfnet.cpp  test_dbow3_confusion_matrix_new_college.cpp  test_dbow3_demo.cpp  test_dbow3_gen_vocab.cpp  test_dbow3_loop_closure.cpp  test_ibow_lcd_demo.cpp  test_obindex2_search.cpp
semantics/sam_tensorrt/: CMakeLists.txt  SamInterface.h  test_sam_auto_segment.cpp  test_sam_sample_with_mouse.cpp  test_sam_video_segment.cpp
utils/: json.h  (+4 more)
utils/datasets/: BALProblem.cpp  BALProblem.h  CMakeLists.txt  DatasetIo.cpp  DatasetIo.h  DatasetIoEuroc.h  DatasetIoKitti.h  DatasetIoReplica.h  DatasetIoRosbag.h  DatasetIoTumRgbd.h  DatasetIoUzh.h  NewCollege.h  RemodeTestDataset.h  TUM.h
utils/features_dl/hfnet/: BaseModel.cpp  CMakeLists.txt  HFNetBaseModel.h  HFNetRTModel.cpp  HFNetRTModel.h  HFNetSettings.cpp  HFNetSettings.h  HFNetTFModel.h  HFNetTFModelV2.h  HFNetVINOModel.cpp  HFNetVINOModel.h  HFextractor.cpp  HFextractor.h
(+236 files in other folders)
